--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
                 <h1 class="text-center ">
                     <strong>GIFTASTIC</strong>
                 </h1>
+                <br>
+                <br>
+                <h3>Add a Movie!</h3>
+                <form role="form">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="search-term">
+                    </div>
+                    <button type="submit" class="btn btn-default" id="run-search"> Search</button>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h3 class="panel-title"> Movies</h3>
@@ -49,25 +57,10 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-4">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"> Add a Movie!</h3>
-                            </div>
-                            <div class="panel-body">
-                                <form role="form">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="search-term">
-                                    </div>
-                                    <button type="submit" class="btn btn-default" id="run-search"> Search</button>
 
-                            </div>
-                            <button type="button" class="btn btn-default" id="clear-all">
-                                Clear Results</button>
-                        </div>
-                    </div>
+                </div>
 
-
+                </div>
                 </div>
 
 
